fixed font too big

--- a/app/bedrock/web/app/themes/flatsome-child-stash/style.css
+++ b/app/bedrock/web/app/themes/flatsome-child-stash/style.css
@@ -479,7 +479,7 @@ input[type='button'].button,
 .section-banner-gen p {
   margin: 0;
   padding: 0;
-  font-size: 2.4em;
+  font-size: 0.8em;
   font-weight: 600;
   text-shadow: 2px 2px 5px #00000021;
   text-transform: capitalize;
